--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,25 @@
   height: 100%;
   background-color: #37384e;
 }
+
+.switch {
+  width: 50px;
+  height: 26px;
+  background-color: blue;
+  display: flex;
+  justify-content: flex-start;
+  border-radius: 50px;
+  padding: 3px;
+  cursor: pointer;
+}
+
+.switch[data-isOn='true'] {
+  justify-content: flex-end;
+}
+
+.handle {
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border-radius: 40px;
+}
